<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vograbulary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="previous">Previous</string>
    <string name="word">Word</string>
    <string name="insert_description">insertion arrow</string>
    <string name="title_activity_russian_dolls">Russian Dolls</string>
    <string name="choose_challenge">Choose a Vograbulary challenge.</string>
    <string name="title_activity_bacronyms">Bacronyms</string>
    <string name="title_activity_ultraghost">Ultraghost</string>
    <string name="title_activity_hyperghost">Hyperghost</string>
    <string name="title_activity_students">Students</string>
    <string name="choose_students">Choose one or more students to take the challenge.</string>
    <string name="start">Start</string>
    <string name="add">Add</string>
    <string name="student_name">Name:</string>
    <string name="delete">Delete</string>
    <string name="example_letters">ABC</string>
    <string name="example_owner">Owner</string>
    <string name="respond">Respond</string>
    <string name="solve">Solve</string>
    <string name="example_summary">Summary</string>
    <string name="example_result">result</string>
    <string name="example_hint">HINT</string>
    <string name="choose_word_length">Minimum word length is 0.</string>
    <string name="choose_vocabulary_size">Computer\'s vocabulary size is 0.</string>
    <string name="title_activity_anagrams">Anagrams (beta)</string>
    <string name="dismiss_message">OK</string>

</resources>
