<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/russianDollsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.donkirkby.vograbulary.RussianDollsActivity" >

    <TextView
        android:id="@+id/clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/insertImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spacer"
        android:layout_below="@+id/clue"
        android:layout_marginLeft="-16dp"
        android:contentDescription="@string/insert_description"
        android:src="@drawable/insert" />

    <TextView
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertImage"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/dragImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-70dp"
        android:layout_toRightOf="@+id/spacer"
        android:layout_below="@+id/spacer"
        android:src="@drawable/drag" />
    
    <ImageView
        android:id="@+id/dragImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/spacer"
        android:layout_below="@+id/spacer"
        android:src="@drawable/drag" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dragImage1"
        android:layout_toLeftOf="@+id/spacer"
        android:onClick="previous"
        android:text="@string/previous"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dragImage2"
        android:layout_toRightOf="@+id/spacer"
        android:onClick="next"
        android:text="@string/next"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scoreDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/previousButton"
        android:layout_below="@+id/previousButton"
        android:text="Score: 0"
        android:textSize="30sp" />

</RelativeLayout>